--- a/src/scss/components/_parcel.scss
+++ b/src/scss/components/_parcel.scss
@@ -230,7 +230,8 @@
   &__approximatePrice {
     $ap: &;
     @include block();
-    min-width: 300px;
+    width: 100%;
+    max-width: 450px;
     border: 1px solid #67E17A;
     box-sizing: border-box;
     border-radius: 20px;
@@ -334,10 +335,17 @@
 
   &__checkSending {
     @include block();
+    width: 100%;
+    max-width: 450px;
     margin-top: 16px;
     background-color: #EAE4FF;
     border-radius: 20px;
     padding: 24px 26px 24px 24px;
+
+    @media (max-width: $screen_md) {
+      margin-top: 36px;
+      border-radius: 10px;
+    }
 
     &-title {
       @include block();
@@ -852,6 +860,342 @@
 
     &--indentMin {
       margin-top: 20px;
+    }
+  }
+
+  &__table {
+    $tab: &;
+    @include flex();
+    flex-direction: column;
+    margin-bottom: 16px;
+
+    &-thing {
+      display: none;
+      margin: 6px 0 10px 0;
+      font-weight: 700;
+      font-size: 12px;
+      line-height: 16px;
+      letter-spacing: 0.02em;
+      color: #9296A0;
+
+      @media (max-width: $screen_md) {
+        @include block();
+      }
+    }
+
+    &-box {
+      @include flex();
+      flex-wrap: wrap;
+
+      @media (max-width: $screen_md) {
+        margin-bottom: 16px;
+      }
+
+      &:nth-child(1) {
+        width: 45%;
+
+        @media (max-width: $screen_md) {
+          width: 100%;
+        }
+      }
+
+      &:nth-child(2) {
+        width: 17%;
+
+        @media (max-width: $screen_md) {
+          width: 100%;
+        }
+      }
+
+      &:nth-child(3) {
+        width: 21%;
+
+        @media (max-width: $screen_md) {
+          width: 50%;
+          padding-right: 8px;
+        }
+      }
+
+      &:nth-child(4) {
+        flex: 1;
+
+        @media (max-width: $screen_md) {
+          flex: auto;
+          width: 50%;
+          padding-left: 8px;
+        }
+      }
+    }
+
+    &-head {
+      @include flex();
+
+      @media (max-width: $screen_md) {
+        display: none;
+      }
+
+      #{$tab}-box {
+        min-height: 36px;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 16px;
+        letter-spacing: 0.02em;
+        color: #9296A0;
+      }
+    }
+
+    &-body {
+      @include flex();
+      flex-direction: column;
+      border: 1px solid #D3D5D9;
+      border-radius: 10px;
+
+      @media (max-width: $screen_md) {
+        border: none;
+        border-radius: 0;
+      }
+    }
+
+    &-bodyBox {
+      @include flex();
+
+      @media (max-width: $screen_md) {
+        flex-wrap: wrap;
+      }
+
+      &:not(:last-child) {
+        border-bottom: 1px solid #D3D5D9;
+
+        @media (max-width: $screen_md) {
+          border: none;
+        }
+      }
+
+      #{$tab}-box {
+        &:not(:nth-last-child(2)) {
+          border-right: 1px solid #D3D5D9;
+
+          @media (max-width: $screen_md) {
+            border: none;
+          }
+        }
+      }
+    }
+
+    &-foot {
+      @include flex();
+      padding-top: 10px;
+
+      @media (max-width: $screen_md) {
+        padding-top: 0;
+      }
+    }
+
+    &-title {
+      display: none;
+      margin-bottom: 4px;
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 16px;
+      letter-spacing: 0.02em;
+
+      @media (max-width: $screen_md) {
+        @include block();
+      }
+    }
+
+    &-input {
+      @include block();
+      width: 100%;
+
+      &-value {
+        @include block();
+        width: 100%;
+        min-height: 34px;
+        padding: 0 30px 0 15px;
+        background-color: transparent;
+        border: none;
+        font-size: 14px;
+        line-height: 18px;
+        letter-spacing: 0.02em;
+
+        @media (max-width: $screen_md) {
+          border: 1px solid #D3D5D9;
+          border-radius: 10px;
+        }
+      }
+
+      &-top, &-bottom {
+        position: absolute;
+        right: 0;
+        width: 18px;
+        height: 50%;
+        cursor: pointer;
+        user-select: none;
+      }
+
+      &-top {
+        @include image('triangle-top-darkGrey.svg', 8px auto, left 0 bottom 3px);
+        top: 0;
+      }
+
+      &-bottom {
+        @include image('triangle-bottom-gray.svg', 8px auto, left 0 top 3px);
+        bottom: 0;
+      }
+
+      &-unit {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        height: 100%;
+        top: 0;
+        right: 0;
+        padding-right: 9px;
+        font-size: 14px;
+        line-height: 18px;
+        letter-spacing: 0.02em;
+        color: #9296A0;
+        user-select: none;
+      }
+    }
+
+    &-close {
+      @include image('close-grey.svg', contain, center);
+      position: absolute;
+      top: 50%;
+      right: -20px;
+      width: 14px;
+      height: 14px;
+      margin-top: -7px;
+      border-radius: 1000px;
+      cursor: pointer;
+      z-index: 1;
+
+      @media (max-width: $screen_md) {
+        display: none;
+      }
+    }
+
+    &-add {
+      @include image('plus-purple.svg', 12px auto, left);
+      position: relative;
+      display: inline-flex;
+      align-items: center;
+      min-height: 16px;
+      padding-left: 18px;
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 16px;
+      letter-spacing: 0.02em;
+      color: #6250E5;
+      cursor: pointer;
+    }
+  }
+
+  &__infoBox {
+    @include block();
+    margin: -5px 0 13px 0;
+
+    @media (max-width: $screen_md) {
+      margin: 0 0 13px 0;
+    }
+
+    .parcel__info {
+      margin-bottom: 36px;
+    }
+  }
+
+  &__insurance {
+    @include block();
+    padding: 10px 16px 8px 16px;
+    border: 1px solid #E4E4E7;
+    border-radius: 10px;
+
+    &-title {
+      @include flex();
+      justify-content: space-between;
+
+      .checkBox {
+        input + label {
+          font-size: 14px;
+          line-height: 18px;
+
+          &:before, &:after {
+            top: 0;
+          }
+        }
+      }
+
+      > b {
+        position: relative;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 18px;
+        letter-spacing: 0.02em;
+      }
+    }
+
+    &-text {
+      @include block();
+      margin: 4px 0 0 24px;
+
+      p {
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 16px;
+        letter-spacing: 0.02em;
+        color: #9296A0;
+      }
+    }
+  }
+
+  &__info {
+    @include block();
+    background: rgba(253, 190, 114, 0.2);
+    border-radius: 10px;
+    padding: 9px 16px 9px 42px;
+
+    &-title {
+      @include block();
+      font-size: 14px;
+      line-height: 18px;
+      letter-spacing: 0.02em;
+    }
+
+    &-text {
+      @include block();
+      margin-top: 4px;
+
+      p {
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 16px;
+        letter-spacing: 0.02em;
+        color: #9296A0;
+      }
+
+      a {
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 16px;
+        letter-spacing: 0.02em;
+        text-decoration: none;
+        color: #6250E5;
+
+        @media (max-width: $screen_md) {
+          display: block;
+          margin-top: 5px;
+        }
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+
+    &--warning {
+      @include image('warning-orange.svg', 16px auto, left 16px top 11px);
     }
   }
 }
