Add pages orderProcessed

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,9 @@
 @import "components/regulations";
 @import "components/authorization";
 @import "components/parcel";
+@import "components/payment";
+@import "components/orderProcessed";
+@import "components/receptionPoint";
 
 
 @import "components/contacts";
