--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,6 +22,8 @@
 @import "components/payment";
 @import "components/orderProcessed";
 @import "components/receptionPoint";
+@import "components/personalData";
+@import "components/orders";
 
 
 @import "components/contacts";
