--- a/src/scss/components/_receptionPoint.scss
+++ b/src/scss/components/_receptionPoint.scss
@@ -29,6 +29,47 @@
     }
   }
 
+  &__link {
+    @include inline_block();
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 18px;
+    text-decoration: none;
+    letter-spacing: 0.02em;
+    color: #6250E5;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  &__trackNumber {
+    @include flex();
+    align-items: center;
+    width: 100%;
+    min-height: 36px;
+    margin: auto 0 0 0;
+    background-color: #E8FCEB;
+    border-radius: 10px;
+    padding: 4px 16px 6px 16px;
+
+    @media (max-width: $screen_xl) {
+      margin-top: 16px;
+    }
+
+    span {
+      @include image('copying-dark.svg', auto 12px, right);
+      position: relative;
+      display: inline-flex;
+      align-items: center;
+      padding: 1px 16px 0 0;
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 16px;
+      letter-spacing: 0.02em;
+    }
+  }
+
   &__info {
     @include block();
     font-weight: 500;
@@ -43,6 +84,18 @@
       letter-spacing: inherit;
       color: #6250E5;
       text-decoration: none;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+
+    b {
+      @include block();
+      font-weight: inherit;
+      font-size: inherit;
+      line-height: inherit;
+      letter-spacing: inherit;
     }
   }
 
@@ -152,6 +205,85 @@
       font-size: 20px;
       line-height: 26px;
       letter-spacing: 0.02em;
+    }
+  }
+
+  &__img {
+    @include block();
+    width: 157px;
+    height: 120px;
+    overflow: hidden;
+    border-radius: 10px;
+    cursor: pointer;
+
+    @media (max-width: 1200px) {
+      width: 137px;
+      height: 100px;
+    }
+
+    @media (max-width: $screen_xl) {
+      width: 100%;
+      height: 120px;
+    } 
+
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  &__side {
+    @include flex();
+
+    @media (max-width: $screen_xl) {
+      flex-direction: column;
+    }
+
+    &-box {
+       @include flex();
+       flex-direction: column;
+       align-items: flex-start;
+
+      &:nth-child(1) {
+        padding-right: 20px;
+
+        @media (max-width: $screen_xl) {
+          padding-right: 0;
+          order: 1;
+        }
+      }
+
+      &:nth-child(2) {
+        flex: 1;
+
+        @media (max-width: $screen_xl) {
+          order: 0;
+          padding-bottom: 20px;
+        }
+      }
+    }
+
+    #{$point}__date {
+      margin: 0 0 4px 0;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 18px;
+    }
+
+    #{$point}__info {
+      margin-bottom: 4px;
+    }
+
+    .button {
+      margin-top: 6px;
+
+      @media (max-width: $screen_xl) {
+        width: 100%;
+      }  
     }
   }
 
