--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,7 @@
 @import "components/receptionPoint";
 @import "components/personalData";
 @import "components/orders";
+@import "components/orderPage";
 
 
 @import "components/contacts";
