--- a/src/scss/components/_elements.scss
+++ b/src/scss/components/_elements.scss
@@ -762,6 +762,222 @@
   }
 }
 
+.tracking {
+  @include block();
+
+  &__title {
+    @include block();
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: 0.02em;
+  }
+
+  &__list {
+    @include block();
+    margin: 14px 0 0 5px;
+
+    li {
+      @include block();
+      padding-left: 15px;
+      border-left: 1px solid transparent;
+
+      &:before {
+        position: absolute;
+        top: -2px;
+        left: -5px;
+        width: 8px;
+        height: 8px;
+        border-radius: 100px;
+        content: '';
+        background-color: #fff;
+        border: 1px solid #18191B;
+        box-shadow: 0 0 0 2px #fff;
+      }
+
+      span {
+        position: relative;
+        top: -5px;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 16px;
+        letter-spacing: 0.02em;
+      }
+
+      &:not(:last-child) {
+        border-left-color: #18191B;
+        padding-bottom: 10px;
+      }
+
+      &.passed {
+        border-left-color: #67E17A;
+
+        &:before {
+          border-color: #67E17A;
+        }
+      }
+      
+      &.active {
+        &:before {
+          background-color: #67E17A;
+          border-color: #67E17A;
+        }
+      }
+    }
+  }
+}
+
+.price {
+  @include block();
+
+  &__title {
+    @include block();
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: 0.02em;
+  }
+
+  &__info {
+    @include block();
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 12px;
+    letter-spacing: 0.02em;
+    color: #9296A0;
+  }
+
+  &__list {
+    @include block();
+    margin-top: 10px;
+
+    li {
+      @include flex();
+      align-items: center;
+      justify-content: space-between;
+
+      &:not(:last-child) {
+        margin-bottom: 4px;
+      }
+    }
+
+    span {
+      position: relative;
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 16px;
+      letter-spacing: 0.02em;
+    }
+  }
+
+  &__total {
+    @include block();
+    border-top: 1px solid #E4E4E7;
+    margin-top: 10px;
+    padding-top: 10px;
+
+    li {
+      @include flex();
+      align-items: center;
+      justify-content: space-between;
+
+      &:not(:last-child) {
+        margin-bottom: 4px;
+      }
+    }
+
+    span {
+      position: relative;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 18px;
+      letter-spacing: 0.02em;
+    }
+  }
+}
+
+.waybill {
+  @include block();
+  width: 100%;
+
+  &__title {
+    @include block();
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: 0.02em;
+  }
+
+  &__block {
+    @include block();
+    margin-top: 9px;
+  }
+
+  &__box {
+    @include flex();
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+
+  &__cont {
+    $cont: &;
+    @include inline_block();
+    padding-left: 42px;
+
+    &:before, &:after {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 32px;
+      height: 32px;
+      content: '';
+      border-radius: 10px;
+    }
+
+    &-name {
+      @include block();
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 16px;
+      letter-spacing: 0.02em;
+    }
+
+    &-info {
+      @include block();
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 16px;
+      letter-spacing: 0.02em;
+      color: #9296A0;
+    }
+
+    &--doc {
+      &:before {
+        background-color: #EAE4FF;
+      }
+  
+      &:after {
+        @include image('doc-purple.svg', 13px auto, center);
+      }
+    }
+  }
+
+  &__download {
+    position: relative;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    color: #6250E5;
+    text-decoration: none;
+    cursor: pointer;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
 .link {
   font-weight: 500;
   font-size: 14px;
@@ -777,4 +993,8 @@
 
 .text-color-green {
   color: #67E17A;
+}
+
+.text-color-greenDark {
+  color: #40C855;
 }
