--- a/src/scss/components/_receptionPoint.scss
+++ b/src/scss/components/_receptionPoint.scss
@@ -37,6 +37,7 @@
     text-decoration: none;
     letter-spacing: 0.02em;
     color: #6250E5;
+    cursor: pointer;
 
     &:hover {
       text-decoration: underline;
@@ -66,6 +67,38 @@
       font-weight: 500;
       font-size: 12px;
       line-height: 16px;
+      letter-spacing: 0.02em;
+    }
+  }
+  
+  &__trackNumberBig {
+    @include flex();
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    min-height: 82px;
+    background-color: #E8FCEB;
+    border-radius: 10px;
+    padding: 16px;
+    margin-top: 20px;
+
+    &-title {
+      @include block();
+      margin-bottom: 8px;
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 16px;
+      letter-spacing: 0.02em;
+    }
+
+    &-value {
+      @include image('copying-dark.svg', auto 16px, right 0 top 4px);
+      position: relative;
+      display: inline-flex;
+      align-items: center;
+      padding-right: 20px;
+      font-size: 20px;
+      line-height: 26px;
       letter-spacing: 0.02em;
     }
   }
@@ -106,6 +139,22 @@
 
     @media (max-width: $screen_md) {
       display: block;
+    }
+  }
+
+  &__contBlock {
+    @include flex();
+    flex-direction: column;
+    margin-top: 20px;
+
+    #{$point}__date {
+      margin-top: 0;
+    }
+
+    #{$point}__link {
+      margin-top: 4px;
+      font-size: 12px;
+      line-height: 16px;
     }
   }
 
