Add - modal-order-cancellation

--- a/src/scss/components/_elements.scss
+++ b/src/scss/components/_elements.scss
@@ -1358,6 +1358,7 @@
   letter-spacing: 0.02em;
   color: #9E91FB;
   text-decoration: none;
+  cursor: pointer;
 
   &:hover {
     text-decoration: underline;
