--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,5 +30,6 @@
 @import "components/contacts";
 @import "components/footer";
 @import "components/404";
+@import "components/modal";
 @import "components/ios";
 @import "components/uiKit";
